# ur_rtde_controller

./: .gitmodules  CMakeLists.txt  README.md  Text File  c  generate_trajectory.py  package.xml  requirements.txt
DA SISTEMARE/include/compute_jacobian/: compute_ur_jacobian_dot.h  compute_whole_body_jacobian.h
DA SISTEMARE/include/compute_kinematic/: compute_ur_direct_kinematic.h
DA SISTEMARE/include/ur_speed_control/: ur_speed_control.h
DA SISTEMARE/launch/: cartesian_controller.launch
DA SISTEMARE/src/ur_joint_position_control/: ur_joint_position_control.cpp
DA SISTEMARE/src/ur_speed_control/: ur_speed_control.cpp
include/jacobian/: compute_ur_jacobian.h
include/polyfit/: polyfit.h
include/rtde_controller/: position_controller.h  rtde_controller.h  velocity_controller.h
launch/: position_controller.launch  rtde_controller.launch  rtde_controller.launch.py  velocity_controller.launch
msg/: CartesianPoint.msg
script/: generate_trajectory.py
scripts/: generate_trajectory.py  joint_command_publisher.py  kinematic_wrapper.py  move_robot.py  robot_toolbox.py
src/kinematic/: tasks.py
src/polyfit/: polyfit.cpp
src/rtde_controller/: position_controller.cpp  rtde_controller.cpp  velocity_controller.cpp
srv/: GetForwardKinematic.srv  GetGripperPosition.srv  GetInverseKinematic.srv  GetRobotStatus.srv  RobotiQGripperControl.srv  StartFreedriveMode.srv
ur_speed_control/: CMakeLists.txt  package.xml
ur_speed_control/include/: Ur10e_controller.h
ur_speed_control/include/cartesian_controller/: cartesian_controller.h
ur_speed_control/include/ur_speed_control/: ur_speed_control.h
ur_speed_control/launch/: cartesian_controller.launch
ur_speed_control/msg/: robot_status.msg
ur_speed_control/src/cartesian_controller/: cartesian_controller.cpp  cartesian_controller_node.cpp
ur_speed_control/src/speed_controller/: speed_controller.cpp
ur_speed_control/src/ur_force_control/: ur_force_control.cpp
ur_speed_control/src/ur_speed_control/: ur_speed_control.cpp  ur_speed_control_node.cpp
ur_speed_control/src/whole_body_admittance/: whole_body_admittance (copia).cpp  whole_body_admittance.cpp
ur_speed_control/srv/: command_gripper.srv
