<?xml version="1.0"?>
<package format="2">

  <name>ur_rtde_controller</name>
  <version>0.0.0</version>
  <description>The ur_rtde_controller package</description>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="davide.ferrari95@unimore.it">Davide</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="davide.ferrari95@unimore.it">Davide</maintainer>
  <maintainer email="marco.minelli@unimore.it">Marco</maintainer>
  <maintainer email="andrea.pupa@unimore.it">Andrea</maintainer>

  <!-- RTDE Libraries -->
  <url type="website">https://sdurobotics.gitlab.io/ur_rtde/index.html</url>

  <license>TODO</license>

  <!-- Build Dependancies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
