<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>ur_rtde_controller</name>
  <version>0.0.0</version>
  <description>UR RTDE Controller Package</description>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <maintainer email="marco.minelli@unimore.it">Marco Minelli</maintainer>
  <maintainer email="andrea.pupa@unimore.it">Andrea Pupa</maintainer>

  <!-- RTDE Libraries -->
  <url type="website">https://sdurobotics.gitlab.io/ur_rtde/index.html</url>

  <license>BSD-3</license>

  <!-- Build Dependancies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS Dependancies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- LaunchFiles Dependancies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Custom Message Creation Dependancies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message Dependancies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>

  <!-- External Libraries Dependancies -->
  <build_depend>eigen3_cmake_module</build_depend>

  <!-- Test Dependancies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
